Omnibox - Don't Suggest Hidden URLs

This fixes two bugs that show similar symptoms.

(1) HistoryURL provider, if the user types the URL of a page they've visited
before, would suggest that exact match first.  This is supposed to happen.
However, it's not supposed to happen when that visit resulted in an error,
i.e., the page is marked as "hidden" in the database.  Users don't want
help visiting error pages.

(2) HistoryQuick provider, when it starts, rebuilts its index from the history
database.  It doesn't exclude hidden/error pages, and thus they end up getting
suggested.  It should exclude them.

Bug: 799546
Change-Id: Ic2e446f18fc051217a1a3cb58d153bd10d931143
Reviewed-on: https://chromium-review.googlesource.com/903071
Commit-Queue: Mark Pearson <mpearson@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535536}
Former-commit-id: f0efbc1781d3f78cf96a1376999ad501bf28e000