components/history/core/browser/url_database.cc
@@ -253,8 +253,9 @@ bool URLDatabase::InitURLEnumeratorForSignificant(URLEnumerator* enumerator) {
   DCHECK(!enumerator->initialized_);
   std::string sql("SELECT ");
   sql.append(kURLRowFields);
-  sql.append(" FROM urls WHERE last_visit_time >= ? OR visit_count >= ? OR "
-             "typed_count >= ?");
+  sql.append(
+      " FROM urls WHERE hidden = 0 AND "
+      "(last_visit_time >= ? OR visit_count >= ? OR typed_count >= ?)");
   sql.append(
       " ORDER BY typed_count DESC, last_visit_time DESC, visit_count "
       "DESC");
